fixed lettering and spacing

--- a/css/web-portal.css
+++ b/css/web-portal.css
@@ -13,6 +13,10 @@
          animation: fadein 2s;
 }
 
+.software-headerTitle p {
+    width: 75%;
+}
+
 .webportal-header img {
     max-width: 50%;
     margin-right: 8%;
